syntax = "proto3";

package projects;

option go_package = "okapi-data-service/protos";

// Projects service method definitions
service Projects {
  rpc Index(IndexRequest) returns (IndexResponse);
  rpc Fetch(FetchRequest) returns (FetchResponse); 
}

// Index io description
message IndexRequest {}

message IndexResponse {
  int32 total = 1;
  int32 errors = 2;
}

// Projects io description
message FetchRequest {}

message FetchResponse {}